# globaleventstravel

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
admin/: .gitignore  README.md  next.config.js  (+3 more)
backend/: .gitignore  README.md  pyproject.toml  run.py  test_brevo_email.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_brevo_schema.py  b2c3d4e5f6g7_site_settings.py  c3d4e5f6g7h8_google_reviews.py  d4e5f6g7h8i9_blog_posts_content_longtext.py  e8f6412800f4_initial_migration.py  f53efd85673f_your_description.py  g5h6i7j8k9l0_leads_email_nullable.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  blog.py  bookings.py  contacts.py  email_logs.py  expeditions.py  google_reviews.py  guides.py  health.py  leads.py  media.py  offices.py  page_content.py  site_settings.py  testimonials.py  treks.py  uploads.py  webhooks.py
backend/app/core/: auth.py  config.py  deps.py  security.py
backend/app/crud/: __init__.py  base.py  blog.py  booking.py  contact.py  email_log.py  expedition.py  google_review.py  guide.py  lead.py  media.py  office.py  page_content.py  site_settings.py  testimonial.py  trek.py  user.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/models/: __init__.py  blog.py  booking.py  contact.py  email_log.py  expedition.py  google_review.py  google_reviews_meta.py  guide.py  lead.py  media.py  office.py  page_content.py  site_settings.py  testimonial.py  trek.py  user.py
backend/app/email/: __init__.py  templates.py
backend/app/email/templates/: contact_notification.html  itinerary_to_user.html  lead_notification.html
backend/app/models/: auth.py  batch.py  blog.py  booking.py  common.py  contact.py  email_log.py  expedition.py  google_review.py  guide.py  lead.py  media.py  office.py  page_content.py  site_settings.py  testimonial.py  trek.py
backend/app/scripts/: __init__.py  wordpress_import.py
backend/app/services/: __init__.py  email.py  google_reviews_sync.py  storage.py
backend/migrations/: add_expedition_status.sql  run_migration.py
(+134 files in other folders)
